--- a/clickpc/interfaces/carrito.html
+++ b/clickpc/interfaces/carrito.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="estilos.css">
 </head>
 <body >
-    <table   bordercolor="#12A2B1" width="1884px"  height="2px"bgcolor="#12A2B1" >
+    <table   bordercolor="#3FB112" width="1884px"  height="2px"bgcolor="#12A2B1" >
         <tr>
             <td><font color="WHITE"><h4> click.pc110@gmail.com </h4></font></td>
             
